[Chore] 타입 변경